   penalty. This is now done. Thanks to Roman Torgovitsky for 
   reporting the original problem.

** Tweedie family added (including `ldTweedie' function to evaluate 
   log Tweedie densities for powers in (1,2]).

* The `newton' optimizer places upper limits on smoothing parameters 
  for all (RE)ML smoothing parameter estimation, to enhance stability. 

* The adaptive smoothing "ad" class has been greatly simplified and 2D 
  penalty improved. Much faster as a result, and 2D adaptive actually 
  quite good.

* gam.fit3 now checks that the initial PIRLS step produces an 
  improvement in penalized deviance relative to a null model. If not 
  then step halving towards the null model parameter is employed.
  The null model is as close to constant predicted values as the model
  structure allows (it is estimated upfront in estimate.gam, to save 
  computation)

* `gam.side' now takes account of whether the model has an intercept 
  (or the model model matrix column corresponding to an intercept is 
   in the column space of the model matrix of the parametric model 
   components).  

* The smoothing parameter array returned by `gam' now includes names
  for the smoothing parameters.

* s and te check that `id' is a single element.

* By default, partial residuals are no longer plotted for smooths with 
  `by' variables since they are usually meaningless here (they can 
  be re-instated by argument `by.resids').

* `min.sp' processing modified to work with `paraPen' argument to 
  `gam'.

* vcov.gam defaults to Bayesian covariance matrix.
  
* indexing error in `parametricPenalty' corrected.

* plot.gam modified so that page change behaviour is like plot.glm 

* negbin family upgraded to work with (RE)ML.

* `sp.vcov' function added to extract covariance matrix of log 
  smoothing parameters from (RE)ML based fits.

* `power' links now handled by default fitting methods (i.e. gam.fit3)

* `magic.post.proc' now expects weights, not sqrt(weights) as the 